[package]
name        = "poc-improve-durableobject"
version     = "0.1.0"
edition     = "2021"
authors     = ["kanarus <kanarus786@gmail.com>"]
repository  = "https://github.com/kanarus/poc-improve-durableobject"
description = "POC for improve-durableobject branch"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = { git = "https://github.com/kanarus/workers-rs", branch = "improve-durableobject" }